@@ -2,6 +2,8 @@
   (needed for aria2 to handle mirrors not having some media_info/*)
 - urpmi.addmedia, urpmi.update:
   o only look for "descriptions" in media_info/
+  o do not get "descriptions" on non update media since it's useless and
+    potentially slow
 - urpmi.addmedia:
   o --distrib: do not skip "debug_for=" media
     (debug media will be added with flag "ignore" if noauto=1)
